# cedar-grpo

./: .gitignore  README.md  main.tex  requirements.txt  test_n_samples.py
GRPO/: prompts.py  (+3 more)
llm_eval_structured_output/: .env.example  .gitignore  README.md  config.py  data_loader.py  evaluator.py  llm_client.py  main.py  pyproject.toml  requirements.txt  results.py
llm_eval_structured_output/docs/: adding_a_metric.md  metric_definitions.md
llm_eval_structured_output/metrics/: __init__.py  base.py  binary.py  counting.py  coverage.py  graph_structure.py  registry.py  scorebased.py
llm_eval_structured_output/prompts/: __init__.py  dataset_notes.py
llm_eval_structured_output/prompts/binary/: __init__.py  evidence_explanation_directionality.py
llm_eval_structured_output/prompts/counting/: __init__.py  backtracking.py  branchiness.py  differential_elimination.py  prior.py  uncertainty_markers.py
llm_eval_structured_output/prompts/coverage/: __init__.py  observation_coverage.py
llm_eval_structured_output/prompts/graph_structure/: __init__.py  rationale_graph.py
llm_eval_structured_output/prompts/scorebased/: __init__.py  evidence_explanation_directionality_scorebased.py
llm_eval_structured_output/random_samples/: samples_10.json  samples_100.json  samples_200.json  samples_3.json  samples_5.json  samples_50.json
llm_eval_structured_output/reporting/: __init__.py  comparison_logs.py  csv.py  excel.py  plots.py
llm_eval_structured_output/scripts/: gen_report.sh  gen_report_single.sh  gen_slides.sh  generate_latex_report.py  generate_latex_slides.py
(+161 files in other folders)
