[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-eval"
version = "0.1.0"
description = "LLM reasoning-trace evaluation pipeline"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "google-genai>=1.73.1",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "networkx>=3.2.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort
ignore = ["E501"]           # line-length handled above
